--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -31,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintGuide_begin="0dp"
+            app:layout_constraintGuide_begin="130dp"
             app:layout_constraintGuide_percent="0.2" />
 
         <ImageButton
@@ -83,18 +83,29 @@
                 android:id="@+id/textView2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="70dp"
                 android:text="Histórico de receitas visualizadas"
-                tools:layout_editor_absoluteX="3dp"
-                tools:layout_editor_absoluteY="78dp" />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageView
             android:id="@+id/imageView4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="68dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/guideline13"
             tools:src="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Nome Perfil"
+            android:textColor="#FDFDFD"
+            tools:layout_editor_absoluteX="133dp"
+            tools:layout_editor_absoluteY="103dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
