--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/fullscreenbg"
-    tools:context=".RegisterActivity">
+    tools:context=".Activity.RegisterActivity">
 
     <EditText
         android:id="@+id/etUser"
