--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MyRecipesFragment">
+    tools:context=".Activity.MyRecipesFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvMyRecipes"
